# hw_data

./: pyproject.toml  requirements.txt
hw_data/hw_1/: hw_1.ipynb
hw_data/hw_10/: hw_10.ipynb  hw_10_part2.ipynb
hw_data/hw_11/: hw_11.ipynb
hw_data/hw_12/: hw_12.ipynb
hw_data/hw_2/: hw2_1.ipynb  hw2_2.ipynb  hw2_3.ipynb
hw_data/hw_3/: hw_3.ipynb
hw_data/hw_4/: OverfittingHomeWork.ipynb
hw_data/hw_5/: data_X.pickle  dataset.pickle  hw_5.ipynb
hw_data/hw_6/: hw_6.ipynb
hw_data/hw_7/: hw_7.ipynb
hw_data/hw_8/: GoIT_HW_8_new.ipynb
hw_data/hw_9/: hw_9.ipynb
