[tool.poetry]
name = "hw-data"
version = "0.1.0"
description = ""
authors = ["ZhovtenkoA <127408550+ZhovtenkoA@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hw_data"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
notebook = "^7.0.6"
seaborn = "^0.13.0"
lxml = "^4.9.3"
surprise = "^0.1"
hyperopt = "^0.2.7"
scikit-surprise = "^1.1.3"
nltk = "^3.8.1"
spacy = "^3.7.4"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
